[MacViews] Shim |ShowModalDialog| for Polychrome

Since "ViewsBrowserWindows" is a Chrome feature, this CL follows
CreateNativeWebModalManager in declaring a function in components
and defining it in c/b/ui/cocoa.

Background:
Polychrome is an intermediate step to shipping MacViews browser.
Currently, switching between Cocoa browser and MacViews browser requires
a buildflag. Polychrome builds both Cocoa and MacViews into the same
binary and allows switching between them based on a feature flag.
More details at crbug.com/802257

As Cocoa and (much of) Views were not typically built together,
some symbols were reused. With Polychrome, these are duplicate symbols.
This CL resolves the issue by renaming the Cocoa symbols, and then
shimming them for the (regular, not Polychrome) Cocoa build.

Bug: 808017
Change-Id: I9bf1845aa22305928aafd74884793f0fa86afe56
Reviewed-on: https://chromium-review.googlesource.com/929942
Reviewed-by: Mike Wittman <wittman@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538832}
Former-commit-id: 1a37b1651971b41c71ba51040bee38a51584697c