components/constrained_window/constrained_window_views.h
@@ -7,6 +7,7 @@
 
 #include <memory>
 
+#include "build/build_config.h"
 #include "ui/gfx/native_widget_types.h"
 
 namespace content {
@@ -50,6 +51,12 @@ content::WebContents* GetTopLevelWebContents(
 // notify via WillClose() when it is being destroyed.
 void ShowModalDialog(gfx::NativeWindow dialog,
                      content::WebContents* web_contents);
+#if defined(OS_MACOSX)
+// Temporary shim for Polychrome. See bottom of first comment in
+// https://crbug.com/804950 for details.
+void ShowModalDialogCocoa(gfx::NativeWindow dialog,
+                          content::WebContents* web_contents);
+#endif
 
 // Calls CreateWebModalDialogViews, shows the dialog, and returns its widget.
 views::Widget* ShowWebModalDialogViews(
