components/web_modal/web_contents_modal_dialog_manager.h
@@ -31,11 +31,16 @@ class WebContentsModalDialogManager
   void SetDelegate(WebContentsModalDialogManagerDelegate* d);
 
 #if defined(OS_MACOSX)
-  // Note: This method is not defined inside components/web_modal/ as its
+  // Note: These methods are not defined inside components/web_modal/ as their
   // definition (needed for Cocoa builds) depends on chrome/browser/ui/cocoa/.
   static SingleWebContentsDialogManager* CreateNativeWebModalManager(
       gfx::NativeWindow dialog,
       SingleWebContentsDialogManagerDelegate* native_delegate);
+
+  // Whether the browser is using Cocoa UI. See http://crbug.com/802257 for
+  // details.
+  static bool IsCocoaBrowser();
+
 #endif
 
   // Allow clients to supply their own native dialog manager. Suitable for
